Closed
Bug 361571
Opened 19 years ago
Closed 19 years ago
"Assertion failure: fp->scopeChain == parent" with watch, setter, eval
Categories
(Core :: JavaScript Engine, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla1.8.1
People
(Reporter: jruderman, Assigned: mrbkap)
Details
(4 keywords)
Attachments
(1 file)
|
1.10 KB,
patch
|
brendan
:
review+
dveditz
:
approval1.8.0.9+
dveditz
:
approval1.8.1.1+
|
Details | Diff | Splinter Review |
js> this.__defineSetter__('y', eval); this.watch('y', function () { return ""; }); y = 1;
Assertion failure: fp->scopeChain == parent, at jsfun.c:614
Seems harmless in opt.
| Assignee | ||
Comment 1•19 years ago
|
||
| Assignee | ||
Updated•19 years ago
|
Priority: -- → P2
Target Milestone: --- → mozilla1.8.1
Comment 2•19 years ago
|
||
Comment on attachment 246475 [details] [diff] [review]
Give the pseudo frame a scopeChain
This should go into 1.8.x branches.
/be
Attachment #246475 -
Flags: review?(brendan)
Attachment #246475 -
Flags: review+
Attachment #246475 -
Flags: approval1.8.1.1?
Attachment #246475 -
Flags: approval1.8.0.9?
Comment 3•19 years ago
|
||
Comment on attachment 246475 [details] [diff] [review]
Give the pseudo frame a scopeChain
approved for 1.8/1.8.0 branches, a=dveditz for drivers
Attachment #246475 -
Flags: approval1.8.1.1?
Attachment #246475 -
Flags: approval1.8.1.1+
Attachment #246475 -
Flags: approval1.8.0.9?
Attachment #246475 -
Flags: approval1.8.0.9+
Comment 4•19 years ago
|
||
1.8 branch: new revision: 3.56.2.12; previous revision: 3.56.2.11
1.8.0 branch: new revision: 3.56.2.1.4.6; previous revision: 3.56.2.1.4.5
Leaving open for mrbkap to commit to trunk (which is closed atm for 1.9alpha).
/be
Keywords: fixed1.8.0.9,
fixed1.8.1.1
| Assignee | ||
Comment 5•19 years ago
|
||
Fixed everywhere now.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 6•19 years ago
|
||
Checking in regress-361571.js;
/cvsroot/mozilla/js/tests/js1_5/Regress/regress-361571.js,v <-- regress-361571.js
initial revision: 1.1
done
Flags: in-testsuite+
Comment 7•19 years ago
|
||
verified fixed 20061201 1.8.0.9 windows/linux/mac*, 1.8.1.1 windows/linux/mac*, 1.9 windows/linux
Status: RESOLVED → VERIFIED
Comment 8•19 years ago
|
||
catch the indirect eval exception on trunk.
/cvsroot/mozilla/js/tests/js1_5/extensions/regress-361571.js,v <-- regress-361571.js
new revision: 1.3; previous revision: 1.2
You need to log in
before you can comment on or make changes to this bug.
Description
•