Give the psuedo frame a scopeChain. bug 361571, r=brendan a=dveditz